--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -3,6 +3,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import com.jfoenix.controls.JFXButton?>
 <GridPane fx:controller="sample.Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+    <JFXButton>test</JFXButton>
 </GridPane>
