--- a/src/main/resources/views/splash.fxml
+++ b/src/main/resources/views/splash.fxml
@@ -11,11 +11,11 @@
     <children>
         <ImageView fitHeight="800" fitWidth="1226" pickOnBounds="true">
             <image>
-                <Image url="@/images/back.jpg" />
+                <Image url="@/images/schoonmeersen.jpg" />
             </image>
         </ImageView>
         <Pane opacity="0.45" prefHeight="352.0" prefWidth="522.0" style="-fx-background-color: #000000;" />
-        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME">
+        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ITLab">
             <font>
                 <Font name="Roboto Medium" size="56.0" />
             </font>
