beetje refactoring en test titles

--- a/src/main/resources/stylesheet/stylesheet_main.css
+++ b/src/main/resources/stylesheet/stylesheet_main.css
@@ -7,3 +7,8 @@
 .dateNow{
     -fx-background-color:  #4285f5
 }
+.session{
+    -fx-border-color: #4285f5;
+    -fx-border-width: 2px;
+    -fx-text-overrun: ellipsis;
+}
