--- a/src/main/resources/views/main.fxml
+++ b/src/main/resources/views/main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="703" prefWidth="1226" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.MainController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="703" prefWidth="1226" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.MainController">
     <children>
       <HBox fx:id="body" layoutX="226.0" prefHeight="703" prefWidth="1118.0" />
         <JFXDrawer fx:id="drawer" defaultDrawerSize="300.0" layoutY="-6.0" prefHeight="703" prefWidth="108.0" />
