--- a/src/main/resources/views/calendar_main.fxml
+++ b/src/main/resources/views/calendar_main.fxml
@@ -10,12 +10,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.layout.HBox?>
-<AnchorPane prefHeight="703.0" prefWidth="989.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.CalendarController">
+<AnchorPane fx:id="rootAnchor" prefHeight="703.0" prefWidth="989.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.CalendarController">
     <children>
         <!--    section months on left    -->
         <AnchorPane prefHeight="568.0" prefWidth="124.0" style="-fx-background-color: #4285f5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -170,62 +170,62 @@
                 </AnchorPane>
                 <JFXButton fx:id="btnJanuary" layoutY="61.0" onAction="#onButtonJanuaryClicked" style="-fx-text-fill: #FFFFFF;" text="January" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnFebruary" layoutY="99.0" onAction="#onButtonFebruaryClicked" style="-fx-text-fill: #FFFFFF;" text="February" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnMarch" layoutY="137.0" onAction="#onButtonMarchClicked" style="-fx-text-fill: #FFFFFF;" text="March" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnApril" layoutY="175.0" onAction="#onButtonAprilClicked" style="-fx-text-fill: #FFFFFF;" text="April" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnMay" layoutY="213.0" onAction="#onButtonMayClicked" style="-fx-text-fill: #FFFFFF;" text="May" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnJune" layoutY="251.0" onAction="#onButtonJuneClicked" style="-fx-text-fill: #FFFFFF;" text="June" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnJuly" layoutY="289.0" onAction="#onButtonJulyClicked" style="-fx-text-fill: #FFFFFF;" text="July" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnAugust" layoutY="327.0" onAction="#onButtonAugustClicked" style="-fx-text-fill: #FFFFFF;" text="August" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnSeptember" layoutY="365.0" onAction="#onButtonSeptemberClicked" style="-fx-text-fill: #FFFFFF;" text="September" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnOctober" layoutY="403.0" onAction="#onButtonOctoberClicked" style="-fx-text-fill: #FFFFFF;" text="October" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnNovember" layoutY="441.0" onAction="#onButtonNovemberClicked" style="-fx-text-fill: #FFFFFF;" text="November" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnDecember" layoutY="479.0" onAction="#onButtonDecemberClicked" style="-fx-text-fill: #FFFFFF;" text="December" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font size="16.0" />
                     </font>
                 </JFXButton>
             </children>
@@ -234,24 +234,24 @@
         <!-- section of controls on top  -->
         <Pane layoutX="124.0" prefHeight="55.0" prefWidth="865.0" style="-fx-border-color: #CCCCCC; -fx-border-width: 0 0 1 0;">
             <children>
-                <Label fx:id="labelMonth" layoutX="37.0" layoutY="10.0" prefHeight="22.0" text="June," textFill="#1a08d4">
+                <Label fx:id="labelMonth" layoutX="220.0" layoutY="18.0" prefHeight="22.0" text="June," textFill="#1a08d4">
                     <font>
-                        <Font name="Franklin Gothic Medium" size="30.0" />
+                        <Font size="30.0" />
                     </font>
                 </Label>
-                <Label fx:id="labelYear" layoutX="714.0" layoutY="11.0" prefHeight="22.0" text="0000" textFill="#919192">
+                <Label fx:id="labelYear" layoutX="734.0" layoutY="18.0" prefHeight="22.0" text="0000" textFill="#919192">
                     <font>
-                        <Font name="HoloLens MDL2 Assets" size="30.0" />
+                        <Font name="System Bold" size="30.0" />
                     </font>
                 </Label>
                 <JFXButton fx:id="btnNextYear" layoutX="786.0" layoutY="16.0" onAction="#onButtonNextYearClicked" prefHeight="25.0" prefWidth="25.0" style="-fx-border-radius: 4em; -fx-text-fill: #FFFFFF; -fx-background-radius: 4em; -fx-background-color: #CCCCCC;" text="&gt;">
                     <font>
-                        <Font name="Arial Black" size="12.0" />
+                        <Font size="12.0" />
                     </font>
                 </JFXButton>
                 <JFXButton fx:id="btnLastYear" layoutX="683.0" layoutY="16.0" onAction="#onButtonLastYearClicked" prefHeight="25.0" prefWidth="25.0" style="-fx-border-radius: 4em; -fx-text-fill: #FFFFFF; -fx-background-radius: 4em; -fx-background-color: #CCCCCC;" text="&lt;">
                     <font>
-                        <Font name="Arial Black" size="12.0" />
+                        <Font size="12.0" />
                     </font>
                 </JFXButton>
             </children>
