--- a/src/main/resources/views/main.fxml
+++ b/src/main/resources/views/main.fxml
@@ -3,12 +3,12 @@
 <?import com.jfoenix.controls.JFXDrawer?>
 <?import com.jfoenix.controls.JFXHamburger?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <AnchorPane id="AnchorPane" fx:id="root" prefHeight="703" prefWidth="1226" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.MainController">
     <children>
-      <HBox fx:id="body" layoutX="226.0" prefHeight="703" prefWidth="1118.0" />
-        <JFXDrawer fx:id="drawer" defaultDrawerSize="300.0" layoutY="-6.0" prefHeight="703" prefWidth="108.0" />
-        <JFXHamburger fx:id="hamburger" layoutX="20" layoutY="14.0" />
+      <StackPane fx:id="body" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="226.0" AnchorPane.rightAnchor="0.0"/>
+        <JFXDrawer fx:id="drawer" prefWidth="108.0" />
     </children>
 </AnchorPane>
