--- a/src/main/resources/views/sidepanel.fxml
+++ b/src/main/resources/views/sidepanel.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="703" prefWidth="178.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.SidePanelController">
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.SidePanelController" >
     <children>
         <ImageView fitHeight="127.0" fitWidth="226.0" pickOnBounds="true">
             <image>
