--- a/src/main/resources/views/popover.fxml
+++ b/src/main/resources/views/popover.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXComboBox?>
-<?import com.jfoenix.controls.JFXDatePicker?>
-<?import com.jfoenix.controls.JFXTextArea?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXTimePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.PopOverController">
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Label?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXTimePicker?>
+<VBox xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.PopOverController">
    <children>
       <JFXTextField fx:id="title" />
       <HBox>
@@ -25,14 +25,14 @@
          <children>
             <Label text="Begin: " />
             <JFXDatePicker fx:id="startDate" />
-            <JFXTimePicker fx:id="startTime" />
+<!--            <JFXTimePicker fx:id="startTime" />-->
          </children>
       </HBox>
       <HBox prefHeight="55.0" prefWidth="600.0">
          <children>
             <Label text="Einde:" />
-            <JFXDatePicker fx:id="endDate" />
-            <JFXTimePicker fx:id="endTime" />
+<!--            <JFXDatePicker fx:id="endDate" />-->
+<!--            <JFXTimePicker fx:id="endTime" />-->
          </children>
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0">
