--- a/src/main/resources/views/session.fxml
+++ b/src/main/resources/views/session.fxml
@@ -62,8 +62,9 @@
             </Text>
             <JFXListView fx:id="ingeschrevenList">
                <VBox.margin>
-                  <Insets left="30.0" right="30.0" top="5.0" />
-               </VBox.margin></JFXListView>
+                  <Insets left="30.0" right="30.0" top="5.0"/>
+               </VBox.margin>
+            </JFXListView>
          </children>
       </VBox>
    </content>
