--- a/src/main/resources/views/statisticsview.fxml
+++ b/src/main/resources/views/statisticsview.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.251"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="ITLab.controller.StatisticsViewController"
             prefHeight="400.0" prefWidth="600.0">
-<Label>Statistics</Label>
+    <Label>Statistics</Label>
 </AnchorPane>
