--- a/src/main/resources/views/announcementsview.fxml
+++ b/src/main/resources/views/announcementsview.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.AnnouncementsViewController">
+<AnchorPane fx:id="anchorPane" xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.AnnouncementsViewController">
    <children>
-      <VBox prefHeight="600.0" prefWidth="800.0">
+      <VBox AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <Label prefHeight="18.0" prefWidth="600.0" text="Aankondigingen" />
             <HBox prefHeight="100.0" prefWidth="200.0">
