--- a/src/main/resources/views/popover.fxml
+++ b/src/main/resources/views/popover.fxml
@@ -2,20 +2,25 @@
 
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTimePicker?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import com.jfoenix.controls.JFXTabPane?>
-<?import javafx.scene.control.Tab?>
-<JFXTabPane fx:id="tabPane" fx:controller="ITLab.controller.PopOverController" id="o" prefHeight="550.0"
-            prefWidth="640.0" styleClass="popover"
-            xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1">
+
+<?import javafx.scene.control.ListView?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import com.jfoenix.controls.JFXListCell?>
+<JFXTabPane id="o" fx:id="tabPane" prefHeight="550.0" prefWidth="640.0" styleClass="popover"
+            xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ITLab.controller.PopOverController">
    <Tab fx:id="tab1">
       <VBox>
          <children>
@@ -28,23 +33,44 @@
                      </image>
                   </ImageView>
                </children>
+               <VBox.margin>
+                  <Insets top="5.0"/>
+               </VBox.margin>
             </AnchorPane>
-            <JFXTextField fx:id="title" promptText="Title..." styleClass="text"/>
+            <JFXTextField fx:id="title" promptText="Title..." styleClass="text">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+               </VBox.margin>
+            </JFXTextField>
             <HBox>
                <children>
-                  <Label fx:id="campusLabel" prefHeight="33.0" styleClass="text" text="Campus:"/>
+                  <Label fx:id="campusLabel" prefHeight="25.0" prefWidth="85.0" styleClass="text" text="Campus:"/>
                   <JFXComboBox fx:id="campus" prefHeight="25.0" prefWidth="246.0"/>
-                  <Label fx:id="lokaalLabel" prefHeight="33.0" styleClass="text" text="Lokaal:"/>
-                  <JFXTextField fx:id="room" prefHeight="25.0" prefWidth="141.0"/>
+                  <Label fx:id="lokaalLabel" prefHeight="25.0" prefWidth="66.0" styleClass="text" text="Lokaal:">
+                     <HBox.margin>
+                        <Insets left="50.0"/>
+                     </HBox.margin>
+                  </Label>
+                  <JFXTextField fx:id="room" prefHeight="25.0" prefWidth="192.0"/>
                </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+               </VBox.margin>
             </HBox>
-            <JFXTextArea fx:id="description" prefHeight="64.0" prefWidth="600.0" promptText="Omschrijving..."/>
+            <JFXTextArea fx:id="description" prefHeight="64.0" prefWidth="600.0" promptText="Omschrijving...">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+               </VBox.margin>
+            </JFXTextArea>
             <HBox prefHeight="57.0" prefWidth="600.0">
                <children>
                   <Label fx:id="beginLabel" prefHeight="31.0" prefWidth="43.0" styleClass="text" text="Begin: "/>
                   <JFXDatePicker fx:id="startDate"/>
                   <JFXTimePicker fx:id="startTime"/>
                </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+               </VBox.margin>
             </HBox>
             <HBox prefHeight="55.0" prefWidth="600.0">
                <children>
@@ -52,24 +78,48 @@
                   <JFXDatePicker fx:id="endDate"/>
                   <JFXTimePicker fx:id="endTime"/>
                </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+               </VBox.margin>
             </HBox>
-            <HBox prefHeight="44.0" prefWidth="600.0">
+            <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
                   <Label fx:id="verantwoordelijkLabel" prefHeight="30.0" styleClass="text" text="Verantwoordelijke: "/>
                   <JFXComboBox fx:id="responsible" prefHeight="25.0" prefWidth="493.0"/>
-               </children>
-            </HBox>
-            <HBox prefHeight="44.0" prefWidth="600.0">
-               <children>
                   <Label fx:id="gastSprekerLabel" prefHeight="30.0" styleClass="text" text="Gast: "/>
                   <JFXComboBox fx:id="gastSpreker" prefHeight="25.0" prefWidth="493.0"/>
                </children>
-            </HBox>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+               </VBox.margin>
+            </VBox>
          </children>
       </VBox>
    </Tab>
    <Tab fx:id="tab2">
+      <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <VBox fx:id="vbox" prefHeight="400.0" prefWidth="600.0">
+               <children>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <HBox layoutX="91.0" layoutY="46.0" prefHeight="310.0" prefWidth="419.0">
+                           <children>
+                              <JFXListView fx:id="ingeschreven" prefHeight="310.0" prefWidth="142.0"/>
+                              <JFXListView fx:id="aanwezig" prefHeight="310.0" prefWidth="142.0"/>
+                              <JFXListView fx:id="afwezig" prefHeight="310.0" prefWidth="142.0"/>
+                           </children>
+                        </HBox>
+                        <Label fx:id="ingeschrevenLabel" layoutX="127.0" layoutY="23.0" text="Ingeschreven"/>
+                        <Label fx:id="afwezigLabel" layoutX="384.0" layoutY="23.0" text="Afwezig"/>
+                        <Label fx:id="afwezigLabelPercentage" layoutX="456.0" layoutY="23.0" text="\% afwezig"/>
+                        <Label fx:id="aanwezigLabel" layoutX="275.0" layoutY="23.0" text="Aanwezig"/>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </VBox>
+         </children>
+      </AnchorPane>
 
    </Tab>
 </JFXTabPane>
-
