--- a/src/main/resources/views/usersview.fxml
+++ b/src/main/resources/views/usersview.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.251"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ITLab.controller.UsersViewController"
-            prefHeight="400.0" prefWidth="600.0">
-    <Label>Users</Label>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.UsersViewController">
+   <VBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <children>
+          <Label>Users</Label>
+         <JFXButton fx:id="addUserButton" text="Gebruiker toevoegen" />
+         <TableView fx:id="userTableView" prefHeight="378.0" prefWidth="600.0">
+           <columns>
+               <TableColumn fx:id="familieNaamColumn" prefWidth="75.0" text="Familienaam" />
+             <TableColumn fx:id="voornaamColumn" prefWidth="75.0" text="Voornaam" />
+             <TableColumn fx:id="typeColumn" prefWidth="75.0" text="Type" />
+               <TableColumn fx:id="statusColumn" prefWidth="75.0" text="Status" />
+               <TableColumn fx:id="userNameColumn" prefWidth="75.0" text="Gebruikersnaam" />
+           </columns>
+         </TableView>
+      </children>
+   </VBox>
 </AnchorPane>
