Add show UserPopover on double click

--- a/src/main/resources/views/userpopover.fxml
+++ b/src/main/resources/views/userpopover.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox id="o" prefHeight="369.0" prefWidth="640.0" styleClass="popover" stylesheets="@../stylesheet/popover.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.PopOverController">
+<VBox id="o" prefHeight="369.0" prefWidth="640.0" styleClass="popover" stylesheets="@../stylesheet/popover.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <AnchorPane prefHeight="180.0" prefWidth="200.0">
             <children>
@@ -24,29 +24,29 @@
       <HBox prefHeight="48.0" prefWidth="640.0">
          <children>
             <Label text="Familienaam" />
-            <JFXTextField />
+            <JFXTextField fx:id="lastnameField" />
             <Label text="Voornaam" />
-            <JFXTextField />
+            <JFXTextField fx:id="firstnameField" />
          </children>
       </HBox>
         <HBox prefHeight="52.0" prefWidth="640.0">
             <children>
-                <Label fx:id="campusLabel" prefHeight="33.0" styleClass="text" text="Type" />
-                <JFXComboBox fx:id="campus" prefHeight="25.0" prefWidth="246.0" />
-                <Label fx:id="lokaalLabel" prefHeight="33.0" styleClass="text" text="Status" />
-            <JFXComboBox prefHeight="31.0" prefWidth="304.0" />
+                <Label prefHeight="33.0" styleClass="text" text="Type" />
+                <JFXComboBox fx:id="typeComboBox" prefHeight="25.0" prefWidth="246.0" />
+                <Label prefHeight="33.0" styleClass="text" text="Status" />
+                <JFXComboBox fx:id="statusComboBox" prefHeight="31.0" prefWidth="304.0" />
             </children>
         </HBox>
       <HBox prefHeight="60.0" prefWidth="640.0">
          <children>
             <Label text="Gebruikersnaam" />
-            <JFXTextField prefHeight="31.0" prefWidth="448.0" />
+            <JFXTextField fx:id="usernameField" prefHeight="31.0" prefWidth="448.0" />
          </children>
       </HBox>
       <HBox prefHeight="54.0" prefWidth="640.0">
          <children>
-            <JFXButton />
-            <JFXButton text="Sluiten" />
+            <JFXButton fx:id="commitButton" />
+            <JFXButton fx:id="closeButton" text="Sluiten" />
          </children></HBox>
     </children>
 </VBox>
