--- a/src/main/resources/views/popover.fxml
+++ b/src/main/resources/views/popover.fxml
@@ -18,15 +18,15 @@
 <?import javafx.scene.control.ListView?>
 <?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXListCell?>
-<JFXTabPane id="o" fx:id="tabPane" prefHeight="550.0" prefWidth="640.0" styleClass="popover"
+<JFXTabPane id="o" fx:id="tabPane" prefHeight="550.0" prefWidth="550.0" styleClass="popover"
             xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="ITLab.controller.PopOverController">
    <Tab fx:id="tab1">
       <VBox>
          <children>
-            <AnchorPane prefHeight="180.0" prefWidth="200.0">
+            <AnchorPane prefHeight="180.0" prefWidth="550.0">
                <children>
-                  <ImageView fitHeight="150.0" fitWidth="600.0" layoutX="188.0" pickOnBounds="true"
+                  <ImageView fitHeight="150.0" fitWidth="550.0" layoutX="188.0" pickOnBounds="true"
                              preserveRatio="true">
                      <image>
                         <Image url="@../images/gettyimages-664767584-612x612.jpg"/>
@@ -97,23 +97,23 @@
       </VBox>
    </Tab>
    <Tab fx:id="tab2">
-      <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane fx:id="anchorPane">
          <children>
-            <VBox fx:id="vbox" prefHeight="400.0" prefWidth="600.0">
+            <VBox fx:id="vbox">
                <children>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane>
                      <children>
-                        <HBox layoutX="91.0" layoutY="46.0" prefHeight="310.0" prefWidth="419.0">
+                        <HBox layoutY="46.0" prefHeight="310.0" prefWidth="550.0">
                            <children>
-                              <JFXListView fx:id="ingeschreven" prefHeight="310.0" prefWidth="142.0"/>
-                              <JFXListView fx:id="aanwezig" prefHeight="310.0" prefWidth="142.0"/>
-                              <JFXListView fx:id="afwezig" prefHeight="310.0" prefWidth="142.0"/>
+                              <JFXListView fx:id="ingeschreven" prefHeight="310.0" prefWidth="183.3"/>
+                              <JFXListView fx:id="aanwezig" prefHeight="310.0" prefWidth="183.4"/>
+                              <JFXListView fx:id="afwezig" prefHeight="310.0" prefWidth="183.3"/>
                            </children>
                         </HBox>
-                        <Label fx:id="ingeschrevenLabel" layoutX="127.0" layoutY="23.0" text="Ingeschreven"/>
-                        <Label fx:id="afwezigLabel" layoutX="384.0" layoutY="23.0" text="Afwezig"/>
-                        <Label fx:id="afwezigLabelPercentage" layoutX="456.0" layoutY="23.0" text="\% afwezig"/>
-                        <Label fx:id="aanwezigLabel" layoutX="275.0" layoutY="23.0" text="Aanwezig"/>
+                        <Label fx:id="ingeschrevenLabel" layoutX="60.0" layoutY="23.0" text="Ingeschreven"/>
+                        <Label fx:id="afwezigLabel" layoutX="392.0" layoutY="23.0" text="Afwezig"/>
+                        <Label fx:id="afwezigLabelPercentage" layoutX="473.0" layoutY="23.0" text="\% afwezig"/>
+                        <Label fx:id="aanwezigLabel" layoutX="251.0" layoutY="23.0" text="Aanwezig"/>
                      </children>
                   </AnchorPane>
                </children>
