--- a/src/main/resources/views/main.fxml
+++ b/src/main/resources/views/main.fxml
@@ -6,6 +6,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import com.jfoenix.controls.JFXDrawer?>
+<?import javafx.scene.image.Image?>
+
+
+
 <AnchorPane id="AnchorPane" fx:id="root" prefHeight="703" prefWidth="1226" xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ITLab.controller.MainController">
     <children>
       <StackPane fx:id="body" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="226.0" AnchorPane.rightAnchor="0.0"/>
