--- a/src/main/resources/stylesheet/tabpane.css
+++ b/src/main/resources/stylesheet/tabpane.css
@@ -11,7 +11,9 @@
 }
 
 .jfx-tab-pane .tab-selected-line {
-    -fx-stroke: #75bc1b;
+    -fx-border-color: #b22222;
+    -fx-stroke: #b22222;
+    -fx-background-color: #b22222;
     -fx-stroke-width: 3pt;
 }
 
@@ -35,5 +37,5 @@
 }
 
 .jfx-rippler {
-    -jfx-rippler-fill: green;
+    -jfx-rippler-fill: #123c57;
 }
